; ModuleID = '/home/carl/AnghaBench/curl/lib/extr_content_encoding.c_client_init_writer.c'
source_filename = "/home/carl/AnghaBench/curl/lib/extr_content_encoding.c_client_init_writer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.connectdata = type { i32 }
%struct.TYPE_3__ = type { i64 }

@CURLE_WRITE_ERROR = common dso_local global i32 0, align 4
@CURLE_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.connectdata*, %struct.TYPE_3__*)* @client_init_writer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @client_init_writer(%struct.connectdata* %0, %struct.TYPE_3__* %1) #0 {
  %3 = alloca %struct.connectdata*, align 8
  %4 = alloca %struct.TYPE_3__*, align 8
  store %struct.connectdata* %0, %struct.connectdata** %3, align 8
  store %struct.TYPE_3__* %1, %struct.TYPE_3__** %4, align 8
  %5 = load %struct.connectdata*, %struct.connectdata** %3, align 8
  %6 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %7 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %12

10:                                               ; preds = %2
  %11 = load i32, i32* @CURLE_WRITE_ERROR, align 4
  br label %14

12:                                               ; preds = %2
  %13 = load i32, i32* @CURLE_OK, align 4
  br label %14

14:                                               ; preds = %12, %10
  %15 = phi i32 [ %11, %10 ], [ %13, %12 ]
  ret i32 %15
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
